Fixed issue with contact section height not being high enough on mobile landscape resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,7 +479,7 @@ hr{
 
 #contact {
     text-align: center;
-    height: 45vw;
+    height: auto;
     display: flex;
     flex-direction: column;
 }
